# RPub

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile_prof  README.md  config.json  docker-compose.yml  refactor_test.epub  rpub.db  test_ammonia.rs  test_output.epub
.github/workflows/: docker-publish.yml
src/: config.rs  db.rs  email.rs  epub_gen.rs  feed.rs  handlers.rs  image.rs  image_inmem.rs  main.rs  opds.rs  processor.rs  routes.rs  scheduler.rs  util.rs
src/db/: mod.rs  schema_init.rs
src/handlers/: config_handler.rs  domain_override_handler.rs  download_handler.rs  feed_handler.rs  mod.rs  read_it_later_handler.rs  schedule_handler.rs
src/models/: mod.rs
src/util/: content_extractors.rs
static/: index.html  style.css
ui/src/: App.svelte  app.css
ui/src/components/: DomainOverrideSection.svelte  GeneralConfigSection.svelte  ReadItLaterSection.svelte  SchedulesSection.svelte
