[package]
name = "rpub"
version = "0.1.0"
edition = "2021"

[dependencies]
feed-rs = "1.3"
reqwest = { version = "0.11", features = ["json", "blocking", "cookies"] } # Added blocking for simplicity if needed, but will use async
tokio = { version = "1", features = ["full"] }
epub-builder = "0.7"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0" # For error handling
axum = "0.7"
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
dom_smoothie = "0.13"
rusqlite = { version = "0.31", features = ["bundled"] }
tokio-cron-scheduler = "0.9"
image = "0.24"
regex = "1.10"
ammonia = "3.3"




